k8s.yaml
################## k8s ##################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-grpc-client
  namespace: default
  labels:
    app: istio-grpc-client
    version: v11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-grpc-client
      version: v11
  template:
    metadata:
      name: istio-grpc-client
      labels:
        app: istio-grpc-client
        version: v11
    spec:
      containers:
        - name: istio-grpc-client
          image: istio-grpc-client:1.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 18030
            - name: grpc
              containerPort: 18031
          livenessProbe:
            httpGet:
              port: 18030
              path: /actuator/health
          readinessProbe:
            httpGet:
              port: 18030
              path: /actuator/health
          volumeMounts:
            - mountPath: /config
              name: config-volume
      volumes:
        - name: config-volume
          configMap:
            name: istio-grpc-client
      restartPolicy: Always


---
apiVersion: v1
kind: Service
metadata:
  name: istio-grpc-client
  namespace: default
  labels:
    app: istio-grpc-client
    service: istio-grpc-client
    version: v11
spec:
  type: NodePort
  selector:
    app: istio-grpc-client
    version: v11
  ports:
    - name: http
      port: 18030
      targetPort: 18030
      nodePort: 32030
    - name: grpc
      port: 18031
      targetPort: 18031
      nodePort: 32031

################## k8s provider ##################

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-grpc-server
  namespace: default
  labels:
    app: istio-grpc-server
    version: v11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-grpc-server
      version: v11
  template:
    metadata:
      name: istio-grpc-server
      labels:
        app: istio-grpc-server
        version: v11
    spec:
      containers:
        - name: istio-grpc-server
          image: istio-grpc-server:1.1
          ports:
            - name: http
              containerPort: 18010
            - name: grpc
              containerPort: 18011
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 18010
              path: /actuator/health
          readinessProbe:
            httpGet:
              port: 18010
              path: /actuator/health
          volumeMounts:
            - mountPath: /config
              name: config-volume
      volumes:
        - name: config-volume
          configMap:
            name: istio-grpc-server
      restartPolicy: Always


---
apiVersion: v1
kind: Service
metadata:
  name: istio-grpc-server
  namespace: default
  labels:
    app: istio-grpc-server
    service: istio-grpc-server
    version: v11
spec:
  type: ClusterIP
  selector:
    app: istio-grpc-server
    version: v11
  ports:
    - name: http
      port: 18010
      targetPort: 18010
    - name: grpc
      port: 18011
      targetPort: 18011
