istio.yaml
################## istio ##################
# nonk8s
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ext-host-gwy
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - k8s.example.com

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
spec:
  mtls:
    mode: STRICT

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-grpc-server
spec:
  host: istio-grpc-server
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    connectionPool:
      tcp:
        maxConnections: 1024
        connectTimeout: 3s
        idleTimeout: 1h
        tcpKeepalive:
          time: 7200s
          interval: 75s
      http:
        http1MaxPendingRequests: 1024
        http2MaxRequests: 1024
        #h2UpgradePolicy: UPGRADE
        #useClientProtocol: false
    # 下面的配置意思是：如果在30秒内，出现5次5xx的错误，就将“不健康的服务”禁止调用3分钟。最多把 100%的服务 禁用
    # 切记 不同的端口 之间熔断配置，是相互隔离的。比如：服务A有两个端口提供远程调用，http: 18010，grpc：18011。18010被熔断了。不会影响18011正常的被调用
    outlierDetection:
      # 检测间隔内 5xx错误次数，大于等于5次 就 将服务熔断。
      consecutive5xxErrors: 5
      # 检测间隔为30秒，默认值为10s。意思：30秒内 发生5xx错误次数，大于等于5此。就将 服务熔断
      interval: 30s
      # 熔断的 时长1分钟 默认值为30s。意思：从服务熔断开始，1分钟内 此服务不接收任何请求
      baseEjectionTime: 1m
      #上游服务的负载均衡池中 可熔断的服务 最大百分比。最大弹出比例 100%，默认为10%。
      # 意思：如果 服务提供者 实例是 100 个，那么最多可以将所有的实例都熔断了。
      # 如果设置为 10 。服务提供者实例是100个，服务提供者的实例 低于 10 个的时候。就不再将服务熔断了。最少有 十分之一 的服务是可以用的！
      maxEjectionPercent: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-grpc-client
spec:
  hosts:
    - k8s.example.com
    - istio-grpc-client
  gateways:
    - ext-host-gwy
  http:
    - match:
        - uri:
            prefix: /client/
      rewrite:
        uri: /
      route:
        - destination:
            host: istio-grpc-client
            port:
              number: 18030
      timeout: 1.0s
    - match:
        - uri:
            prefix: /server/
      rewrite:
        uri: /
      route:
        - destination:
            host: istio-grpc-server
            port:
              number: 18010
      timeout: 1.0s
